syntax = "proto3";

service PeerService {
  // RPC để gửi tin nhắn đến peer
  rpc SendMessage (Message) returns (Response);
}

message Message {
  string sender = 1;
  string content = 2;
}

message Response {
  string status = 1;
}